# alchemind-openai

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  mix.exs
.cargo/: config.toml
.github/workflows/: release.yml
lib/: alchemind_openai.ex
lib/alchemind_openai/: application.ex
native/alchemind_openai/: Cargo.toml  README.md
native/alchemind_openai/src/: lib.rs
test/: alchemind_openai_streaming_test.exs  alchemind_openai_test.exs
