[package]
name = "alchemind_openai"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "alchemind_openai"
crate-type = ["cdylib"]

[dependencies]
# Disable default features and explicitly enable required NIF versions via features below
rustler = { version = "0.36.1", default-features = false, features = ["derive"] }
async-openai = "0.19.0"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"

# Add features for NIF versions required by the build matrix
[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]